--- a/smartirrgation/pubspec.yaml
+++ b/smartirrgation/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.10.0
   http : ^1.3.0
+  firebase_auth: ^5.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
